--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>연습장</title>
+    <title>연습장ㄹ</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <!-- 사이트에서 우리눈에 보이는것은 바디태그에 들어갑니다 -->
-    #page > div:nth-child(1) > div.container > div > div.column--primary > div.story-body > h1
-    body > ul > li:nth-child(2)
+
         <h1 id="h1">안녕하세요. 테스트페이지입니다</h1>
         <p id="intro"> 문단은 P태그를 써야해요. </p>
         <h2>Skills</h2>
