--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <link rel='shortcut icon' href='//img.mk.co.kr/main/2015/mk_new/favicon_new.ico'>
 <link rel='canonical' href='https://www.mk.co.kr/news/economy/view/2019/04/256271/'> 
 <link rel='amphtml' href='http://m.mk.co.kr/news/amp/headline/2019/256271?PageSpeed=off'>
-<link rel='alternate' media='only screen and ( max-width: 640px)' href='http://m.mk.co.kr/news/economy/2019/256271/'>
+<link rel='alternate' media='only screen and ( max-width: 640px)' href='https://naver.com'>
 
 <meta name='title' content='KB금융 마리트앱 출시 - 매일경제'>
 <meta name='description' content='KB금융 마리트앱 출시, 섹션-economy, 요약-KB금융 마리트앱 출시'>
 <meta name='classification' content='economy'>
-<meta property='article:published'  content='2019-04-24' />
+<meta property='article:published'  content='2020-01-15' />
 
 <!-- NEWSROOM SCRIPT -->
 <script>
@@ -33,7 +33,7 @@ window._newsroom = window._newsroom || [];
 <!-- END NEWSROOM SCRIPT -->
 
 <meta property="og:type" content="article">
-<meta id="meta_og_url" property="og:url" content="https://www.mk.co.kr/news/economy/view/2019/04/256271/">
+<meta id="meta_og_url" property="og:url" content="https://www.naver.com">
 <meta property="og:title" content="KB금융 마리트앱 출시 - 매일경제">
 <meta property="og:image" content="https://file.mk.co.kr/news/facebook_mknews.jpg">
 <meta property="og:site_name" content="mk.co.kr">
