--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <link rel='stylesheet' type='text/css' href='https://common.mk.co.kr/common/css/2015/news_2015.css'>
 <link rel='stylesheet' type='text/css' href='https://common.mk.co.kr/common/css/2019/error.css'>
 <link rel='shortcut icon' href='//img.mk.co.kr/main/2015/mk_new/favicon_new.ico'>
-<link rel='canonical' href='https://www.mk.co.kr/news/economy/view/2019/04/256271/'> 
-<link rel='amphtml' href='http://m.mk.co.kr/news/amp/headline/2019/256271?PageSpeed=off'>
-<link rel='alternate' media='only screen and ( max-width: 640px)' href='https://naver.com'>
+<link rel='canonical' href='https://www.m.naver.com'> 
+<link rel='amphtml' href='https://m.naver.com'>
+<link rel='alternate' media='only screen and ( max-width: 640px)' href='https://m.naver.com'>
 
 <meta name='title' content='KB금융 마리트앱 출시 - 매일경제'>
 <meta name='description' content='KB금융 마리트앱 출시, 섹션-economy, 요약-KB금융 마리트앱 출시'>
