썸네일수정
1

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ window._newsroom = window._newsroom || [];
 <!-- END NEWSROOM SCRIPT -->
 
 <meta property="og:type" content="article">
-<meta id="meta_og_url" property="og:url" content="https://www.naver.com">
+<meta id="meta_og_url" property="og:url" content="https://m.mk.co.kr">
 <meta property="og:title" content="KB금융 마리트앱 출시 - 매일경제">
 <meta property="og:image" content="https://file.mk.co.kr/news/facebook_mknews.jpg">
 <meta property="og:site_name" content="mk.co.kr">
