--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <title>KB금융 마리트앱 출시 - 매일경제</title>
 <meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta property="article:author" content=""/>
+<meta property="article:author" content="KB금융그룹 마이리얼머니 앱 출시"/>
 <meta name="apple-mobile-web-app-title" content="mk"/>
 <meta name="msvalidate.01" content="04007A2E10C11C9D55D49075FB031478" /> 
 <link rel='stylesheet' type='text/css' href='https://common.mk.co.kr/common/css/2015/news_2015.css'>
 <link rel='stylesheet' type='text/css' href='https://common.mk.co.kr/common/css/2019/error.css'>
 <link rel='shortcut icon' href='//img.mk.co.kr/main/2015/mk_new/favicon_new.ico'>
-<link rel='canonical' href='https://www.m.naver.com'> 
-<link rel='amphtml' href='https://m.naver.com'>
-<link rel='alternate' media='only screen and ( max-width: 640px)' href='https://m.naver.com'>
+<link rel='canonical' href='https://www.m.mk.co.kr'> 
+<link rel='amphtml' href='https://m.mk.co.kr'>
+<link rel='alternate' media='only screen and ( max-width: 640px)' href='https://m.mk.co.kr'>
 
 <meta name='title' content='KB금융 마리트앱 출시 - 매일경제'>
 <meta name='description' content='KB금융 마리트앱 출시, 섹션-economy, 요약-KB금융 마리트앱 출시'>
@@ -652,11 +652,16 @@ $().ready(function() {
 			<div id='article_body' itemprop='articleBody'>
 				<div class='art_txt'><b>KB금융그룹 '마이리얼머니' 앱 출시</b><br/>
                 마리머로 매년 유럽가요.<br/><br/>
-2020년 1월 KB금융그룹은 새해를 맞이하여 마이리얼머니(이하 마리머)앱을 신규 출시하였다.<br/> KB금융그룹의 관계자에 따르면 "마리머는 재테크에 미숙한 젊은 고객들이 소액 자산을 효율적으로 관리할수 있는 앱입니다. 마리머 고객은 모바일로 간편하게 흩어져 있는 자산을 조회하고, 소비관리를 통해 불필요한 지출을 줄일 수 있습니다. 또한 맞춤형 금융상품 추천, 소액투자 등을 통해 시간과 장소에 구애받지 않고 목돈을 만들수 있습니다. "
-<br/>KB금융그룹은 기존에도 락스타, 청춘마루 등 소득이 없는 학생들을 위한 다양한 청년지원 활동을 하였다. 마리머는 단순한 청년지원이 아닌 맞춤형 청년 자산관리앱으로, 기존금융권에서 상대적으로 외면받던 사회초년생을 대상으로 편리한 WM서비스를 제공하여 재테크의 문턱을 낮추어 이미 10만 다운로드를 달성하였다.
+2020년 1월 KB금융그룹은 새해를 맞이하여 마이리얼머니(이하 마리머)앱을 신규 출시하였다.<br/> KB금융그룹의 관계자는
+					"마리머는 재테크에 미숙한 젊은 고객들이 소액 자산을 효율적으로 관리할수 있는 앱입니다.
+					마리머 고객은 모바일로 간편하게 흩어져 있는 자산을 조회하고, 소비관리를 통해 불필요한 지출을 줄일 수 있습니다. 
+					또한 맞춤형 금융상품 추천, 소액투자 등을 통해 시간과 장소에 구애받지 않고 목돈을 만들수 있습니다." 라고 소개하였다
+<br/>KB금융그룹은 기존에도 락스타존, 청춘마루 등 소득이 없는 학생들을 위한 다양한 청년지원 활동을 하였다. 마리머는 단순한 청년지원이 아닌 맞춤형 청년 자산관리앱으로, 
+					기존금융권에서 상대적으로 외면받던 사회초년생을 대상으로 편리한 WM서비스를 제공하여 재테크의 문턱을 낮추었다는 평가를 받고 있다.
 <br/>
-마리머를 설치한 대학원생 박수지씨(24세)은 " 원래 경제관념이 없어서 맨날 용돈날까지 허덕였는데, 마리머로 목표금액 설정해서 유럽 티켓팅했어요. 마리머로 남은자산을 한눈에 보고 효율적으로 관리하게 되어 너무 편리해요. 요샌 제가 투자도 하고 있다니까요 (웃음)"<br/><br/>
-<span style="font-size:12px; color:#464646;">[연합뉴스]<br><span style="background-color:#f5f5f5;"> Copyrights ⓒ 연합뉴스. 무단 전재 및 재배포금지</span></span><br>
+마리머를 사용중인 대학원생 박수지씨(24세)는 " 원래 경제관념이 없어서 맨날 용돈날까지 허덕였는데, 마리머로 목표금액 설정해서 유럽 티켓팅 했어요. 
+					마리머로 남은자산을 한눈에 보고 효율적으로 관리하게 되어 너무 편리해요. 요샌 제가 투자도 하고 있다니까요 (웃음)"라며 후기를 전달하였다.<br/><br/>
+<span style="font-size:12px; color:#464646;">[연합뉴스]<br><span style="background-color:#f5f5f5;"> Copyrights ⓒ KB국민카드 박찬욱. 무단 전재 및 재배포환영</span></span><br>
 					
 					<!--이미지 키우는 스크립트-->
 					<script>window.jQuery || document.write("<script src='//common.mk.co.kr/common/include/mklib/jquery.js'>")</script>
