--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<title>KB금융 마리트앱 출시 - 매일경제</title>
+<title>KB금융 마리머앱 출시 - 매일경제</title>
 <meta http-equiv="Content-Type" content="text/html; charset=euc-kr">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta property="article:author" content="KB금융그룹 마이리얼머니 앱 출시"/>
@@ -15,8 +15,8 @@
 <link rel='amphtml' href='https://m.mk.co.kr'>
 <link rel='alternate' media='only screen and ( max-width: 640px)' href='https://m.mk.co.kr'>
 
-<meta name='title' content='KB금융 마리트앱 출시 - 매일경제'>
-<meta name='description' content='KB금융 마리트앱 출시, 섹션-economy, 요약-KB금융 마리트앱 출시'>
+<meta name='title' content='KB금융 마리머앱 출시 - 매일경제'>
+<meta name='description' content='KB금융 마리머앱 출시, 섹션-economy, 요약-KB금융 마리머앱 출시'>
 <meta name='classification' content='economy'>
 <meta property='article:published'  content='2020-01-15' />
 
@@ -34,16 +34,16 @@ window._newsroom = window._newsroom || [];
 
 <meta property="og:type" content="article">
 <meta id="meta_og_url" property="og:url" content="https://m.mk.co.kr">
-<meta property="og:title" content="KB금융 마리트앱 출시 - 매일경제">
+<meta property="og:title" content="KB금융 마리머앱 출시 - 매일경제">
 <meta property="og:image" content="https://file.mk.co.kr/news/facebook_mknews.jpg">
 <meta property="og:site_name" content="mk.co.kr">
-<meta property="og:description" content="KB금융 마리트앱 출시, 섹션-economy, KB금융 마리트앱 출시">
+<meta property="og:description" content="KB금융 마리머앱 출시, 섹션-economy, KB금융 마리트앱 출시">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="KB금융 마리트앱 출시 - 매일경제">
+<meta name="twitter:title" content="KB금융 마리머앱 출시 - 매일경제">
 <meta name="twitter:site" content="@mk_sokbo">
 <meta name="twitter:image" content="https://file.mk.co.kr/news/facebook_mknews.jpg">
 <meta name="twitter:domain" content="mk.co.kr">
-<meta name="twitter:description" content="KB금융 마리트앱 출시, 섹션-economy, 요약-KB금융 마리트앱 출시">
+<meta name="twitter:description" content="KB금융 마리머앱 출시, 섹션-economy, 요약-KB금융 마리머앱 출시">
 <script type="text/javascript">!function(){var t="https:"==document.location.protocol,o=(t?"https:":"http:")+"//www.googletagservices.com/tag/js/gpt.js";document.write("<script src='"+o+"'></sc"+"ript>")}();</script>
 
 <script type="text/javascript">
